--- a/source/sass/blocks/prices-info.scss
+++ b/source/sass/blocks/prices-info.scss
@@ -13,6 +13,7 @@
   font-size: 55px;
   font-weight: 600;
   line-height: 1.63;
+  word-break: break-all;
   color: var(--c-text-title);
 
   &::after {
