--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -47,11 +47,11 @@
 .review__author-info {
   margin-top: 30px;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
 
   @media (max-width: 767px) {
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 18px;
   }
 }
@@ -60,6 +60,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   margin-right: 16px;
   width: 38px;
   height: 38px;
