--- a/source/sass/blocks/tab-card.scss
+++ b/source/sass/blocks/tab-card.scss
@@ -21,6 +21,7 @@
   font-weight: 600;
   line-height: 1.63;
   letter-spacing: -1.25px;
+  word-break: break-all;
   color: var(--c-text-title);
 
   &::after {
